# MiningOS

./: .env.example  .gitignore  Initial_Target_List.csv  Initial_Target_List.json  README.md  ROADMAP.md  SETUP.md  TESTING.md  docker-compose.yml  nixpacks.toml  pyproject.toml  render.yaml  requirements.txt  sample_import.csv
data_files/: HINKINITE - MINE CLAIMS PERSPECTIVE -- MASTER - Areas for Bryson Review.csv  HINKINITE - MINE CLAIMS PERSPECTIVE -- MASTER - PerspectiveMines.csv  Utah Mine Dockets w Coordinates - Full-Master.csv
docs/: MINING_OS_SYNOPSIS_FOR_AI.md  PRODUCTION_VERCEL_RENDER.md  SAFEGUARDS.md  SESSION_SUMMARY_2026-05-01.md  mining_target_pipeline_spec.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
logs/: README.md
mining_os/: __init__.py  config.py  db.py  geo.py  logging_setup.py  run_discovery_worker.py  scoring.py
scripts/: backfill_mineral_names.py  clean_minerals_catalog.py  dev.sh  pre-push.sh  setup_mlrs_payment_local.sh  start-backend.sh  start-web.sh  start.sh  test-api.sh  test_plss_components_flow.py  verify_csv_import.py  verify_tesseract.py
target_pipeline/: .env.example  README.md  __init__.py  cleanup_pipeline_targets.py  config.py  db.py  filters.py  logging_config.py  mines_to_targets.py  models.py  requirements.txt  run.py
tests/: test_api_endpoints.py  test_area_advanced_search.py  test_area_batch_actions.py  test_area_edit_endpoints.py  test_areas_of_focus.py  test_automation_engine.py  test_blm_plss.py  test_config_db_url.py  test_fetch_claim_records.py  (+4 more)
(+119 files in other folders)
